feat: Business Capabilities Diagram